# property-analyst

./: .gitignore  AGENTS.md  INSTRUCTIONS.md  LICENSE  MEMORY.md  README.md  bootstrap.py  config.py  pyproject.toml  pyrightconfig.json
.config/: AGENTS.md  pre-commit.py  settings.json
.config/skills/: conventional-commits.md  testing.md
.github/workflows/: ci.yml
cli/: main.py
hooks/: pre-commit  pre-push
models/: __init__.py  property.py  watchlist.py
repo-template/: AGENTS.md  pyrightconfig.json
scrapers/: __init__.py  base.py  registry.py  rightmove.py
services/: __init__.py  geocoding.py
storage/: __init__.py  database.py  schema.sql
tests/: conftest.py
tests/unit/: test_property.py  test_rate_limiter.py  test_retry_handler.py
